--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.example.sk_android"
-        minSdkVersion 15
+        minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -21,13 +21,28 @@ android {
         }
     }
 }
+def retrofit_version = "2.5.0"
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "org.jetbrains.anko:anko:0.10.5"
-
     implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.android.support:design:28.0.0'
+    implementation "org.jetbrains.anko:anko:0.10.5"
+    implementation 'com.jaeger.statusbarutil:library:1.5.1'
+    api('com.squareup.retrofit2:converter-gson:' + retrofit_version) {
+        exclude group: 'com.squareup.okhttp3'
+    }
+
+    implementation 'net.sf.ezmorph:ezmorph:1.0.3'
+    implementation('com.google.api-client:google-api-client-android:1.23.0') {
+        exclude group: 'org.apache.httpcomponents'
+    }
+    implementation "org.apache.httpcomponents:httpcore:4.4.10"
+    implementation 'com.airsaid.library:pickerview:1.0.3'
+
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
