--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           xmlns:dist="http://schemas.android.com/apk/distribution"
           package="com.example.sk_android">
-
+    <!--JobWantedEditorActivity-->
+    <!--MainActivity-->
     <dist:module
             dist:instant="true"/>
     <application android:allowBackup="true"
@@ -13,8 +14,9 @@
 
 
         <activity
-                android:name=".mvp.view.activity.MainActivity"
-                android:label="@string/app_name">
+                android:name=".mvp.view.activity.JobWantedEditorActivity"
+                android:label="@string/app_name"
+                android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
