--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           xmlns:dist="http://schemas.android.com/apk/distribution"
           package="com.example.sk_android">
-    <!--JobWantedEditorActivity-->
-    <!--MainActivity-->
+    <!--JobWantedEditActivity-->
+    <!--JobWantedManageActivity-->
+    <!--ProfessionSelectActivity-->
     <dist:module
             dist:instant="true"/>
     <application android:allowBackup="true"
@@ -14,9 +15,9 @@
 
 
         <activity
-                android:name=".mvp.view.activity.MainActivity"
+                android:name=".mvp.view.activity.ProfessionSelectActivity"
                 android:label="@string/app_name"
-                android:theme="@style/AppTheme.NoActionBar">
+                android:theme="@style/AppTheme.ActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
