--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,8 @@
           package="com.example.sk_android">
     <!--JobWantedEditActivity-->
     <!--JobWantedManageActivity-->
-    <!--ProfessionSelectActivity-->
+    <!--IndustrySelectActivity-->
+    <!--CitySelectActivity-->
     <dist:module
             dist:instant="true"/>
     <application android:allowBackup="true"
@@ -15,7 +16,7 @@
 
 
         <activity
-                android:name=".mvp.view.activity.ProfessionSelectActivity"
+                android:name=".mvp.view.activity.CitySelectActivity"
                 android:label="@string/app_name"
                 android:theme="@style/AppTheme.ActionBar">
             <intent-filter>
