[Freater]职位选择第一步

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
 
 
         <activity
-                android:name=".mvp.view.activity.CitySelectActivity"
+                android:name=".mvp.view.activity.JobSelectActivity"
                 android:label="@string/app_name"
                 android:theme="@style/AppTheme.ActionBar">
             <intent-filter>
