[Feature&Update]添加编辑求职意向弹框，修改求职意向页面为碎片布局

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <!--JobWantedManageActivity-->
     <!--IndustrySelectActivity-->
     <!--CitySelectActivity-->
+    <!--JobSelectActivity-->
     <dist:module
             dist:instant="true"/>
     <application android:allowBackup="true"
