--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
 
 
         <activity
-                android:name=".mvp.view.activity.JobSelectActivity"
+                android:name=".mvp.view.activity.JobWantedEditActivity"
                 android:label="@string/app_name"
                 android:theme="@style/AppTheme.ActionBar">
             <intent-filter>
