--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
 
 
         <activity
-                android:name=".mvp.view.activity.RecruitInfoShowActivity"
+                android:name=".mvp.view.activity.Register.LoginActivity"
                 android:label="@string/app_name"
                 android:theme="@style/AppTheme.ActionBar">
             <intent-filter>
@@ -26,7 +26,21 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-
+        <activity android:name=".mvp.view.activity.Register.TelephoneResetPasswordActivity"
+                  android:theme="@style/AppTheme.ActionBar">
+        </activity>
+        <activity android:name=".mvp.view.activity.Register.PasswordVerifyActivity"
+                  android:theme="@style/AppTheme.ActionBar">
+        </activity>
+        <activity android:name=".mvp.view.activity.Register.MemberTreatyActivity"
+                  android:theme="@style/AppTheme.ActionBar">
+        </activity>
+        <activity android:name=".mvp.view.activity.Register.MemberRegistActivity"
+                  android:theme="@style/AppTheme.ActionBar">
+        </activity>
+        <activity android:name=".mvp.view.activity.Register.SetPasswordActivity"
+                  android:theme="@style/AppTheme.ActionBar">
+        </activity>
     </application>
 
 </manifest>
