[Feature]消息沟通记录

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,9 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
+    implementation ('io.github.sac:SocketclusterClientJava:1.7.5'){
+        exclude group :'org.json', module: 'json'
+    }
 
 
     //下拉回弹
