--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,15 +1,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           xmlns:dist="http://schemas.android.com/apk/distribution"
           package="com.example.sk_android">
-    <!--JobWantedEditActivity-->
-    <!--JobWantedManageActivity-->
-    <!--IndustrySelectActivity-->
-    <!--CitySelectActivity-->
-    <!--JobSelectActivity-->
-    <!--RecruitInfoShowActivity-->
-    <!--JobSearchWithHistoryActivity-->
-    <!--JobInfoDetailActivity-->
-    <!--MessageChatRecordActivity-->
+    <!--jobSelect.JobWantedEditActivity-->
+    <!--jobSelect.JobWantedManageActivity-->
+    <!--jobSelect.IndustrySelectActivity-->
+    <!--jobSelect.CitySelectActivity-->
+    <!--jobSelect.JobSelectActivity-->
+    <!--jobSelect.RecruitInfoShowActivity-->
+    <!--jobSelect.JobSearchWithHistoryActivity-->
+    <!--jobSelect.JobInfoDetailActivity-->
+    <!--message.MessageChatRecordActivity-->
     <dist:module
             dist:instant="true"/>
 
@@ -23,7 +23,7 @@
 
 
         <activity
-                android:name=".mvp.view.activity.jobSelect.MessageChatRecordActivity"
+                android:name=".mvp.view.activity.message.MessageChatRecordActivity"
                 android:label="@string/app_name"
                 android:theme="@style/AppTheme.ActionBar">
             <intent-filter>
