--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,5 +86,9 @@ dependencies {
     //聊天
     implementation 'cn.jiguang.imui:messagelist:0.8.0'
 
+    //图片轮播
+    implementation 'com.github.OCNYang:PageTransformerHelp:v1.0.1'
+
+
 
 }
