--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,6 +87,8 @@ dependencies {
     implementation 'cn.jiguang.imui:messagelist:0.8.0'
 
     implementation group: 'com.neovisionaries', name: 'nv-websocket-client', version: '2.8'
+    
+    implementation 'com.zhihu.android:matisse:0.5.2-beta3'
 
 
 }
