--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
     <!--MessageChatActivity-->
     <dist:module
             dist:instant="true"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
     <application android:allowBackup="true"
                  android:label="@string/app_name"
                  android:icon="@mipmap/ic_launcher"
@@ -23,7 +26,7 @@
 
 
         <activity
-                android:name=".mvp.view.activity.message.MessageChatActivity"
+                android:name=".mvp.view.activity.resume.ResumeListActivity"
                 android:label="@string/app_name"
                 android:theme="@style/AppTheme.ActionBar">
             <intent-filter>
@@ -37,7 +40,7 @@
         <activity android:name=".mvp.view.activity.register.PasswordVerifyActivity"
                   android:theme="@style/AppTheme.ActionBar">
         </activity>
-        <activity android:name=".mvp.view.activity.register.MemberTreatyActivity"
+        <activity android:name=".mvp.view.activity.resume.SendResumeActivity"
                   android:theme="@style/AppTheme.ActionBar">
         </activity>
         <activity android:name=".mvp.view.activity.register.MemberRegistActivity"
@@ -58,6 +61,18 @@
         <activity android:name=".mvp.view.activity.register.PersonInformationFourActivity"
                   android:theme="@style/AppTheme.ActionBar">
         </activity>
+        <provider
+                android:name="android.support.v4.content.FileProvider"
+                android:authorities="com.example.sk_android.fileprovider"
+                android:exported="false"
+                android:grantUriPermissions="true">
+            <meta-data
+                    android:name="android.support.FILE_PROVIDER_PATHS"
+                    android:resource="@xml/file_paths_public"></meta-data>
+        </provider>
     </application>
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"></uses-permission>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
+
 </manifest>
