--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,10 @@ apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 28
+    //处理所有报META-INF/*'的错误
+    packagingOptions {
+        pickFirst 'META-INF/*'
+    }
     defaultConfig {
         applicationId "com.example.sk_android"
         minSdkVersion 28
@@ -27,68 +31,65 @@ androidExtensions {
 def retrofit_version = "2.5.0"
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:design:28.0.0'
-    implementation "org.jetbrains.anko:anko:0.10.5"
-    implementation "org.jetbrains.anko:anko-design:0.10.5"
-
+    implementation 'org.jetbrains.anko:anko:0.10.5'
+    implementation 'org.jetbrains.anko:anko-design:0.10.5'
     implementation 'com.jaeger.statusbarutil:library:1.5.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.github.bumptech.glide:glide:4.9.0'
-
     implementation 'com.android.support:recyclerview-v7:28.0.0'
-// Anko Layouts
-    implementation "org.jetbrains.anko:anko-sdk25:0.10.5"
-    implementation "org.jetbrains.anko:anko-appcompat-v7:0.10.5"
-// Coroutine listeners for Anko Layouts(可以在 DSL 中直接使用协程)
-    implementation "org.jetbrains.anko:anko-sdk25-coroutines:0.10.5"
-    implementation "org.jetbrains.anko:anko-appcompat-v7-coroutines:0.10.5"
-
-
+    // Anko Layouts
+    implementation 'org.jetbrains.anko:anko-sdk25:0.10.5'
+    implementation 'org.jetbrains.anko:anko-appcompat-v7:0.10.5'
+    // Coroutine listeners for Anko Layouts(可以在 DSL 中直接使用协程)
+    implementation 'org.jetbrains.anko:anko-sdk25-coroutines:0.10.5'
+    implementation 'org.jetbrains.anko:anko-appcompat-v7-coroutines:0.10.5'
     api('com.squareup.retrofit2:converter-gson:' + retrofit_version) {
         exclude group: 'com.squareup.okhttp3'
     }
-
     implementation 'net.sf.ezmorph:ezmorph:1.0.6'
     implementation('com.google.api-client:google-api-client-android:1.28.0') {
         exclude group: 'org.apache.httpcomponents'
     }
-    implementation "org.apache.httpcomponents:httpcore:4.4.10"
+    implementation 'org.apache.httpcomponents:httpcore:4.4.10'
     implementation 'com.airsaid.library:pickerview:1.0.3'
-
-
     testImplementation 'junit:junit:4.13-beta-2'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-
-    implementation ('io.github.sac:SocketclusterClientJava:1.7.5'){
-        exclude group :'org.json', module: 'json'
+    implementation('io.github.sac:SocketclusterClientJava:1.7.5') {
+        exclude group: 'org.json', module: 'json'
     }
-
-
     //下拉回弹
     implementation 'com.biao:pulltorefresh:1.0.0-beta3'
-
     //左滑删除菜单
     implementation 'com.chauthai.swipereveallayout:swipe-reveal-layout:1.4.1'
     api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30'
-
     //倒计时
     implementation 'com.dyhdyh.support:count-down-timer:1.0.2'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.0.1'
-
     implementation 'com.github.codbking:PickTime:v1.0.1'
-
     //聊天
     implementation 'cn.jiguang.imui:messagelist:0.8.0'
-
-    implementation group: 'com.neovisionaries', name: 'nv-websocket-client', version: '2.8'
-    
+    implementation 'com.neovisionaries:nv-websocket-client:2.8'
     implementation 'com.zhihu.android:matisse:0.5.2-beta3'
+    //屏幕适配
+    implementation 'me.yatoooon:screenadaptation:1.1.1'
+    implementation files('libs/autobahn-0.5.0.jar')
+
+    //okhttp
+    implementation 'com.squareup.okhttp3:okhttp:3.9.0'
+    //gson
+    implementation 'com.google.code.gson:gson:2.8.1'
+    implementation 'com.squareup.okio:okio:1.5.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.4.1'
+    // https://mvnrepository.com/artifact/com.alibaba/fastjson
+    implementation group: 'com.alibaba', name: 'fastjson', version: '1.2.54'
+
 
 
 }
