--- a/sample/exampleui/build.gradle
+++ b/sample/exampleui/build.gradle
@@ -2,14 +2,14 @@ apply plugin: 'com.android.application'
 apply from: "$project.rootDir/tools/script-git-version.gradle"
 
 android {
-    compileSdkVersion 27
-    buildToolsVersion "27.0.3"
+    compileSdkVersion 28
+    buildToolsVersion "28.0.2"
     flavorDimensions "versionCode"
 
     defaultConfig {
         applicationId "imui.jiguang.cn.imuisample"
         minSdkVersion 21
-        targetSdkVersion 27
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
 
@@ -54,18 +54,18 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    implementation 'com.android.support:appcompat-v7:27.1.0'
-    implementation 'com.android.support:design:27.1.0'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:design:28.0.0'
     implementation 'com.github.bumptech.glide:glide:4.6.1'
-    compile 'pub.devrel:easypermissions:0.4.0'
-    compile project(':messagelist')
-    compile project(':chatinput')
-    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5.1'
-    testCompile 'junit:junit:4.12'
+    implementation 'pub.devrel:easypermissions:0.4.0'
+    implementation project(':messagelist')
+    implementation project(':chatinput')
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.5.1'
+    androidTestImplementation 'junit:junit:4.12'
 
 
     implementation 'com.jaeger.statusbarutil:library:1.5.1'
