[Feature]聊天框顶部菜单及其子项的选择和界面反馈

--- a/sample/exampleui/build.gradle
+++ b/sample/exampleui/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-android'
 apply from: "$project.rootDir/tools/script-git-version.gradle"
 
 android {
@@ -69,5 +71,9 @@ dependencies {
 
 
     implementation 'com.jaeger.statusbarutil:library:1.5.1'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
+}
+repositories {
+    mavenCentral()
 }
