--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,10 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
+    }
+    dexOptions{
+        preDexLibraries = false
     }
     buildTypes {
         release {
@@ -129,9 +133,13 @@ dependencies {
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.5.1'
 
 
-
+    //解决网络图片加载,图片闪烁
+    implementation 'com.pingerx:imagego-glide:1.0.2'
+    //解决错误
+    implementation 'com.android.support:multidex:1.0.1'
 
 }
+
 //configurations.all {
 //    resolutionStrategy.eachDependency { DependencyResolveDetails details ->
 //        def requested = details.requested
