--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,8 @@ buildscript {
         jcenter()
         mavenCentral() // jcenter() works as well because it pulls from Maven Central
         maven { url 'https://dl.bintray.com/umsdk/release' }
+        maven {url  "http://dl.bintray.com/piasy/maven" }
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.2'
@@ -23,6 +25,7 @@ allprojects {
         mavenCentral()
         maven { url 'https://jitpack.io' }
         maven { url 'https://dl.bintray.com/umsdk/release' }
+        maven {url  "http://dl.bintray.com/piasy/maven" }
     }
 }
 
