--- a/app/build.gradle
+++ b/app/build.gradle
@@ -120,6 +120,7 @@ dependencies {
     implementation project(':messagelist')
     implementation project(':chatinput')
 
+    implementation 'com.github.YancyYe:GalleryPick:1.2.1'
 
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
@@ -129,16 +130,10 @@ dependencies {
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.5.1'
 
 
+    //图片裁剪
+    implementation 'com.theartofdev.edmodo:android-image-cropper:2.5.+'
 
+    // 圆形ImageView
+    implementation 'de.hdodenhof:circleimageview:3.0.0'
 
 }
-//configurations.all {
-//    resolutionStrategy.eachDependency { DependencyResolveDetails details ->
-//        def requested = details.requested
-//        if (requested.group == 'com.android.support') {
-//            if (!requested.name.startsWith("support-media-compat")) {
-//                details.useVersion '28.0.0'
-//            }
-//        }
-//    }
-//}
