--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,11 +43,11 @@
             </intent-filter>
         </activity>
 
-
+        <!--主聊天界面-->
         <activity android:name="imui.jiguang.cn.imuisample.messages.MessageListActivity"
             android:theme="@style/AppTheme.ActionBar">
         </activity>
-
+        <!--联系人消息列表-->
         <activity android:name="com.example.sk_android.mvp.view.activity.message.MessageChatRecordActivity"
             android:theme="@style/AppTheme.ActionBar">
         </activity>
@@ -89,6 +89,12 @@
         </activity>
         <activity android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
                   android:theme="@style/Base.Theme.AppCompat"/>
+
+
+        <!--图片放大-->
+        <activity android:name="imui.jiguang.cn.imuisample.messages.BrowserImageActivity"
+                  android:theme="@style/Base.Theme.AppCompat"/>
+
         <provider
                 android:name="android.support.v4.content.FileProvider"
                 android:authorities="com.example.sk_android.fileprovider"
