--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
 
 
         <activity
-                android:name=".mvp.view.activity.register.ImproveInformationActivity"
+                android:name=".mvp.view.activity.register.MainActivity"
                 android:label="@string/app_name"
                 android:windowSoftInputMode="adjustPan"
                 android:theme="@style/AppTheme.ActionBar">
@@ -42,6 +42,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".mvp.view.activity.register.TelephoneResetPasswordActivity"
+                  android:theme="@style/AppTheme.ActionBar">
+        </activity>
+        <activity android:name=".mvp.view.activity.register.LoginActivity"
                   android:theme="@style/AppTheme.ActionBar">
         </activity>
         <activity android:name=".mvp.view.activity.register.PasswordVerifyActivity"
@@ -59,7 +62,7 @@
         <activity android:name=".mvp.view.activity.register.SetPasswordActivity"
                   android:theme="@style/AppTheme.ActionBar">
         </activity>
-        <activity android:name=".mvp.view.activity.register.LoginActivity"
+        <activity android:name=".mvp.view.activity.register.ImproveInformationActivity"
 
                   android:theme="@style/AppTheme.ActionBar">
         </activity>
