[表情发送 表情接收]

--- a/messagelist/build.gradle
+++ b/messagelist/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support:support-v4:28.0.0'
     testImplementation 'junit:junit:4.12'
+    implementation project(path: ':chatinput')
 }
 
 apply from: 'android-release-aar.gradle'
