--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
     }
     defaultConfig {
         applicationId "com.example.sk_android"
-        minSdkVersion 21
+        minSdkVersion 23
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -25,6 +25,10 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
@@ -48,7 +52,19 @@ dependencies {
     implementation 'org.jetbrains.anko:anko-design:0.10.5'
     implementation 'com.jaeger.statusbarutil:library:1.5.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation 'com.github.bumptech.glide:glide:4.9.0'
+
+    // Jitsi Meet  视频
+    implementation ('org.jitsi.react:jitsi-meet-sdk:2.1.0') { transitive = true }
+
+    // Glide
+    implementation ('com.github.bumptech.glide:glide:4.7.1'){
+        exclude group: "com.android.support", module: "glide"
+    }
+    implementation("com.github.bumptech.glide:annotations:4.7.1") {
+        exclude group: "com.android.support", module: "annotations"
+    }
+
+
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     // Anko Layouts
     implementation 'org.jetbrains.anko:anko-sdk25:0.10.5'
