--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,9 @@ allprojects {
         maven { url 'https://jitpack.io' }
         maven { url 'https://dl.bintray.com/umsdk/release' }
         maven {url  "http://dl.bintray.com/piasy/maven" }
+        maven {
+            url "https://github.com/jitsi/jitsi-maven-repository/raw/master/releases"
+        }
     }
 }
 
