--- a/app/build.gradle
+++ b/app/build.gradle
@@ -145,6 +145,7 @@ dependencies {
 
     //图片裁剪
     implementation 'com.theartofdev.edmodo:android-image-cropper:2.5.+'
+    implementation 'com.soundcloud.android:android-crop:1.0.1@aar'
 
     // 圆形ImageView
     implementation 'de.hdodenhof:circleimageview:3.0.0'
