--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 28
@@ -48,7 +49,10 @@ dependencies {
     implementation 'org.jetbrains.anko:anko-design:0.10.5'
     implementation 'com.jaeger.statusbarutil:library:1.5.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+
     implementation 'com.github.bumptech.glide:glide:4.9.0'
+    kapt 'com.github.bumptech.glide:compiler:4.9.0'
+
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     // Anko Layouts
     implementation 'org.jetbrains.anko:anko-sdk25:0.10.5'
@@ -157,6 +161,8 @@ dependencies {
     implementation 'org.apache.httpcomponents:httpasyncclient:4.1.3'
 
 
+    //日期选择
+    implementation 'com.github.duanhong169:picker-view:1.0.0'
 
 
 // https://mvnrepository.com/artifact/org.slf4j/slf4j-api
