--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,7 @@
 
 
         <activity
-                android:name=".mvp.view.activity.register.MainActivity"
+                android:name=".mvp.view.activity.register.PersonInformationFourActivity"
                 android:label="@string/app_name"
                 android:windowSoftInputMode="adjustPan"
                 android:theme="@style/AppTheme.ActionBar">
@@ -51,7 +51,14 @@
         <activity android:name="com.example.sk_android.mvp.view.activity.message.MessageChatRecordActivity"
             android:theme="@style/AppTheme.ActionBar">
         </activity>
-
+        <!--工作类型列表-->
+        <activity android:name=".mvp.view.activity.jobselect.JobSelectActivity"
+                  android:theme="@style/AppTheme.ActionBar">
+        </activity>
+        <!--城市列表-->
+        <activity android:name=".mvp.view.activity.jobselect.CitySelectActivity"
+                  android:theme="@style/AppTheme.ActionBar">
+        </activity>
 
         <activity android:name=".mvp.view.activity.register.TelephoneResetPasswordActivity"
                   android:theme="@style/AppTheme.ActionBar">
@@ -81,18 +88,19 @@
 
                   android:theme="@style/AppTheme.ActionBar">
         </activity>
+        <activity android:name=".mvp.view.activity.register.MainActivity"
+                  android:theme="@style/AppTheme.ActionBar">
+        </activity>
         <activity android:name=".mvp.view.activity.register.PersonInformationTwoActivity"
                   android:theme="@style/AppTheme.ActionBar">
         </activity>
         <activity android:name=".mvp.view.activity.register.PersonInformationThreeActivity"
                   android:theme="@style/AppTheme.ActionBar">
         </activity>
-        <activity android:name=".mvp.view.activity.register.PersonInformationFourActivity"
-                  android:theme="@style/AppTheme.ActionBar">
-        </activity>
+
+        <!--裁剪图片需要-->
         <activity android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
                   android:theme="@style/Base.Theme.AppCompat"/>
-
 
         <!--图片放大-->
         <activity android:name="imui.jiguang.cn.imuisample.messages.BrowserImageActivity"
