--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -184,10 +184,12 @@
                 android:name="android.support.v4.content.FileProvider"
                 android:authorities="com.example.sk_android.fileprovider"
                 android:exported="false"
-                android:grantUriPermissions="true"/>
-            <meta-data
-                    android:name="android.support.FILE_PROVIDER_PATHS"
-                    android:resource="@xml/filepaths"></meta-data>
+                android:grantUriPermissions="true">
+
+        <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/filepaths"></meta-data>
+        </provider>
         <meta-data
                 android:name="designwidth"
                 android:value="750" /> //设计图的宽,单位是像素,推荐用markman测量,量出来如果是750px那么请尽量去找ui设计师要一份android的设计图.
