--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -169,6 +169,11 @@
                   android:theme="@style/AppTheme.ActionBar">
         </activity>
 
+        <!--举报页面-->
+        <activity android:name="com.example.sk_android.mvp.view.activity.common.AccusationActivity"
+                  android:theme="@style/AppTheme.ActionBar">
+        </activity>
+
 
 
 
